<resources>
    <string name="app_name">7MinuteWorkout</string>

    <string name="image">image</string>
    <string name="str_start">START</string>

    <string name="exercise_completed">EXERCISES COMPLETED</string>
    <string name="no_data_available">NO DATA AVAILABLE</string>

    <string name="bmi">BMI</string>
    <string name="calculator">CALCULATOR</string>
    <string name="history">HISTORY</string>

    <string name="metric_units">METRIC UNITS</string>
    <string name="us_units">US UNITS</string>
    <string name="weight_in_kg">WEIGHT (in kg)</string>
    <string name="height_in_cm">HEIGHT (in cm)</string>

    <string name="weight_in_lbs">WEIGHT (in lbs)</string>
    <string name="feet">Feet</string>
    <string name="inch">Inch</string>

    <string name="your_bmi">YOUR BMI</string>
    <string name="calculate">CALCULATE</string>

    <string name="end">END</string>
    <string name="congratulations">Congratulations!</string>
    <string name="finished_workout">You have finished the workout!</string>
    <string name="btn_finish">FINISH</string>


    <!-- warning dialog -->
    <string name="are_you_sure">Are you sure?</string>
    <string name="really_want_to_stop">This will stop your workout. You\'ve come this far, are you sure you want to quit?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>

    <string name="get_ready">GET READY FOR</string>
    <string name="upcoming_exercise">UPCOMING EXERCISE:</string>
    <string name="stop">STOP</string>

</resources>