<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExerciseActivity"
    android:orientation="vertical"
    android:background="@drawable/gradient_background_mark_1">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_exercise_activity"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/white" />

    <LinearLayout
        android:id="@+id/ll_RestView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_exercise_activity"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        tools:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_ready"
            android:textColor="@color/colorMain"
            android:textSize="22sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/item_circular_color_accent_border">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@drawable/circular_progress_gray"
                android:indeterminate="false"
                android:max="10"
                android:progress="100"
                android:progressDrawable="@drawable/circular_progress_bar"
                android:rotation="-90" />

            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/item_circular_accent_background"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvTimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="10"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    android:textStyle="bold" />


            </LinearLayout>

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/upcoming_exercise"
            android:textColor="@color/colorHighLighted"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvUpcomingExercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:text="Exercise Name" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_stop_rest"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginTop="220dp"
            android:text="@string/stop"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"
            android:elevation="10dp"
            android:background="@drawable/rounded_button_2"
            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_ExerciseView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_exercise_activity"
        android:layout_above="@id/rvExerciseStatus"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/image"
            android:scaleType="fitXY"
            android:src="@drawable/ic_back_ball_sit"
            />

        <TextView
            android:id="@+id/tvExerciseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Exercise name"
            android:textColor="@color/colorMain"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"/>

        <FrameLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="23dp"
            android:background="@drawable/item_circular_color_accent_border">

            <ProgressBar
                android:id="@+id/exerciseProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@drawable/circular_progress_gray"
                android:indeterminate="false"
                android:max="30"
                android:progress="100"
                android:progressDrawable="@drawable/circular_progress_bar"
                android:rotation="-90"/>

            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/item_circular_accent_background"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvTimer2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:text="30"/>
            </LinearLayout>
        </FrameLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_stop_exercise"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/stop"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"
            android:elevation="10dp"
            android:background="@drawable/rounded_button_2"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvExerciseStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp" />
</RelativeLayout>